syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.cn.protos";


service DoctorService {
  rpc GetDoctorDetails (DoctorGetRequest) returns (DoctorGetResponse);
}

message Specialization {
  string specializationId = 1;
  string name = 2;
}

message DoctorGetRequest {
  string doctorId = 1;
  string name = 2;
  repeated Specialization specializations = 3;

}

message DoctorGetResponse {
  string doctorId = 1;
  string name = 2;
  repeated Specialization specializations = 3;

}


message DoctorEvent {

    enum EventType {
      DOCTOR_CREATED = 0;
      DOCTOR_UPDATED = 1;
      DOCTOR_DELETED = 2;
    }

    EventType eventType = 1;
    string doctorId = 2;
    string name = 3;
    repeated string specializations = 4;
    int64 timestamp = 5;

}


